[tool.poetry]
name = "obsout"
version = "0.1.0"
description = "Syncs md obsidian documents to outline wiki"
authors = ["Gabe Miles <gabrielmiles32@gmail.com>"]
license = "LICENSE.md"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PyYAML = "^6.0.1"
python-dotenv  = "^1.0.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
